--- a/public/style.css
+++ b/public/style.css
@@ -65,6 +65,7 @@ h3 {
     font-size: 2.5rem;
     font-weight: normal;
     color: #555;
+    line-height: 2em;
 }
 
 p {
@@ -98,7 +99,6 @@ a:hover {
 .aside-contents {
     /* border: solid 1px purple; */
     width: 100vw;
-    height: 15vh;
     position: absolute;
     top: 50%;
     left: 50%;
